#6728: Infobox viewer alignment fix

--- a/web/client/themes/default/less/details.less
+++ b/web/client/themes/default/less/details.less
@@ -23,6 +23,18 @@
 
 }
 
+.ms-details-preview {
+    p{
+        margin: 1em;
+    }
+    p, h1, h2, h3, h4, h5, h6, blockquote{
+        &:empty::after {
+            content: "\a";
+            white-space: pre;
+        }
+    }
+}
+
 /////////////////////
 // LIBRARIES FIX
 /////////////////////
